# axum-sqlx-mysql

./: .env.sample  .gitignore  Cargo.toml  README.md
migrations/: 1_setup.sql  2_user.sql  3_follow.sql  4_article.sql
src/: config.rs  main.rs
src/http/: error.rs  extractor.rs  mod.rs  profiles.rs  types.rs  users.rs
src/http/articles/: comments.rs  listing.rs  mod.rs
