[package]
name = "axum-sqlx-mysql"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Konie Shadow <guofengzuo@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
futures = "0.3"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.3.4", features = ["tower-log"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "mysql", "json", "time", "offline"] }

# The `clap` beta gives us a much nicer way to define configuration parameters for our application.
clap = { version ="3.2.22", features = ["derive", "env"] }

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.85"

# State of the art password hashing.
argon2 = "0.3.1"

# Axum builds on the types in Tower
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace"] }

jwt = "0.15.0"
hmac = "0.11.0"
sha2 = "0.9.8"

time = "0.2"

uuid = { version = "0.8", features = ["serde", "v4"] }

# Utility Crates
anyhow = "1.0.48"
async-trait = "0.1.51"
dotenv = "0.15.0"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
regex = "1.6.0"